added styling to the footer and contact

--- a/css/style.css
+++ b/css/style.css
@@ -156,3 +156,11 @@ nav ul li a:hover {
     border: 0.5rem solid #6c63ff;
   }
 
+  .footer {
+    text-align: left;
+    text-decoration: royalblue;
+    text-emphasis-color: blue;
+     
+ } 
+ 
+ 
