--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,6 @@ nav ul li a:hover {
   text-decoration: seashell;
 }
 
-
 /* projects i have worked on */
 
 .container-1{
@@ -141,6 +140,19 @@ nav ul li a:hover {
 
 
 
+@media (max-width: 480px){
+    .container{
+        width: 100vw;
+    }
+
+    .panel:nth-last-of-type(4),
+    .panel:nth-last-of-type(5) {
+        display: none;
+    }
+} 
+
+
+
 .about_me {
     max-width: 100%;
   }
@@ -156,22 +168,150 @@ nav ul li a:hover {
     border: 0.5rem solid #6c63ff;
   }
 
-  .footer {
-    text-align: left;
-    text-decoration: royalblue;
-    text-emphasis-color: blue;
-     
- } 
- 
- @media (max-width: 480px){
-    .container{
-        width: 100vw;
-    }
 
-    .panel:nth-last-of-type(4),
-    .panel:nth-last-of-type(5) {
-        display: none;
-    }
+.footer {
+   text-align: left;
+   text-decoration: royalblue;
+   text-emphasis-color: blue;
+    
 } 
 
- 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+:root {
+  --left-bg-color: rgba(87, 84, 236, 0.7);
+  --right-bg-color: rgba(43, 43, 43, 0.8);
+  --left-btn-hover-color: rgb(255, 255, 255);
+  --right-btn-hover-color: rgba(28, 122, 28, 1);
+  --hover-width: 75%;
+  --other-width: 25%;
+  --speed: 1000ms;
+}
+
+
+.btn-1 {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  left: 50%;
+  top: 40%;
+  transform: translateX(-50%);
+  text-decoration: none;
+  color: #fff;
+  border: #fff solid 0.2rem;
+  font-size: 1rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  width: 15rem;
+  padding: 1.5rem;
+}
+
+.split.left .btn:hover {
+  border-color: rgb(0 0 0);
+  background-color: #fff;
+  border-color: #fff;
+  color: #000;
+}
+
+.split.right .btn:hover {
+  background-color: var(--right-btn-hover-color);
+  border-color: var(--right-btn-hover-color);
+}
+
+.container-4 {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-color: #333;
+} 
+
+.split {
+  position: absolute;
+  width: 50%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.split.left {
+  left: 0;
+  background: url('/img/ps5.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.split.left::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: var(--left-bg-color);
+}
+
+.split.right {
+  right: 0;
+  background: url('/img/xbox.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.split.right::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: var(--right-bg-color);
+}
+
+.split.right,
+.split.left,
+.split.right::before,
+.split.left::before {
+  transition: all var(--speed) ease-in-out;
+}
+
+.hover-left .left {
+  width: var(--hover-width);
+}
+
+.hover-left .right {
+  width: var(--other-width);
+}
+
+.hover-right .right {
+  width: var(--hover-width);
+}
+
+.hover-right .left {
+  width: var(--other-width);
+}
+
+@media (max-width: 800px) {
+  h1 {
+    font-size: 2rem;
+    top: 30%;
+  }
+
+  .btn {
+    padding: 1.2rem;
+    width: 12rem;
+  }
+} 
