added css for the wxpiriences section

--- a/css/style.css
+++ b/css/style.css
@@ -365,3 +365,72 @@ h1 {
 
 
 
+
+/* Experiences */
+
+.card-customize {
+  background-color: steelblue;
+  height: 670px;
+}
+
+.card-customize h4 {
+  font-weight: 600;
+}
+
+.card-customize img {
+  border-radius: 20px;
+}
+
+.bg-card {
+  background-color: lightblue;
+}
+
+.description_company {
+  font-size: 15px;
+  color: rgb(187, 193, 195);
+}
+
+.card-customize {
+  box-shadow: 1px 6px 8px 4px rgba(255, 255, 255, 0.13);
+  -webkit-box-shadow: 1px 6px 8px 4px rgba(255, 255, 255, 0.13);
+  -moz-box-shadow: 1px 6px 8px 4px rgba(255, 255, 255, 0.13);
+}
+
+.card-customize:hover {
+  box-shadow: 1px 6px 8px 8px rgba(255, 255, 255, 0.13);
+  -webkit-box-shadow: 1px 6px 8px 8px rgba(255, 255, 255, 0.13);
+  -moz-box-shadow: 1px 6px 8px 8px rgba(255, 255, 255, 0.13);
+}
+
+.bg-jucsa {
+  background-color: lightblue;
+}
+
+.bg-comp {
+  background-color: lightblue;
+}
+
+.services .card img {
+  height: 80px;
+  width: 80px;
+}
+
+.service_logo {
+  text-align: center;
+}
+
+.services .card {
+  background-color: lightblue;
+  box-shadow: 1px 6px 8px 4px rgba(255, 255, 255, 0.13);
+  -webkit-box-shadow: 1px 6px 8px 4px rgba(255, 255, 255, 0.13);
+  -moz-box-shadow: 1px 6px 8px 4px rgba(255, 255, 255, 0.13);
+  height: 260px;
+}
+
+.services .card:hover,
+.projects .card:hover,
+.img-rounded img:hover {
+  box-shadow: 1px 6px 8px 8px rgba(255, 255, 255, 0.13);
+  -webkit-box-shadow: 1px 6px 8px 8px rgba(255, 255, 255, 0.13);
+  -moz-box-shadow: 1px 6px 8px 8px rgba(255, 255, 255, 0.13);
+}
